Skip local template if dns_domain is undefined

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -50,6 +50,8 @@
   template:
     src: unbound.local.conf
     dest: /etc/unbound/local.d/unbound.local.conf
+  when: >
+    dns_domain is defined
   notify:
     - restart unbound
 
