--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,6 +5,7 @@
 - include_role:
     name: basic-host
     tasks_from: install_packages
+  when: not ansible_unit_test
 
 # RedHat has a hard coded call to unbound-anchor in the service file
 # Without being able to update that it blocks startup for almost a minute.
@@ -17,6 +18,7 @@
     mode: 0644
   notify:
     - restart unbound
+  when: not ansible_unit_test
 
 - name: update unbound configuration
   template:
@@ -31,7 +33,8 @@
 
 - name: verify unbound configuration
   shell: /usr/sbin/unbound-checkconf /etc/unbound/unbound.conf.new
-  when: status is changed
+  when: status is changed and
+        not ansible_unit_test
 
 - name: update unbound configuration
   copy:
@@ -41,7 +44,9 @@
     group: root
     mode: 0644
     remote_src: yes
-  when: status is changed
+  when: >
+    not ansible_unit_test and
+    status is changed
   notify:
     - restart unbound
 
@@ -52,9 +57,11 @@
     state: enabled
     immediate: true
   when: >
+    not ansible_unit_test and
     ansible_os_family == "RedHat" or
     (firewalld_available is defined and
     firewalld_available == True)
 
 - name: enable unbound
   service: name=unbound enabled=yes
+  when: not ansible_unit_test
