--- a/tests/test_data/minimal_setup.conf
+++ b/tests/test_data/minimal_setup.conf
@@ -1,4 +1,4 @@
-#Able managed
+# Ansible managed
 #
 # See the unbound.conf(5) man page.
 # The server clause sets the main parameters.
@@ -57,22 +57,21 @@ server:
 
 
 
-      # no ipv4 address for dummy0
-      # no ipv4 address for eth0
-      # lxc0
-      interface: 10.10.10.1
-      access-control: 10.10.10.0/24 allow
-      # tun0
-      interface: 172.24.42.2
-      access-control: 172.24.42.0/24 allow
-      # no ipv4 address for veth1000_levh
-      # no ipv4 address for veth1000_S9Ni
-      # wg0
-      interface: 172.25.0.51
+      # aardsoftnew
+      interface: 172.25.65.59
       access-control:  allow
-      # wlan0
-      interface: 192.168.32.107
-      access-control: 192.168.32.0/24 allow
+      # docker0
+      interface: 172.17.0.1
+      access-control: 172.17.0.0/16 allow
+      # enp42s0
+      interface: 192.168.0.11
+      access-control: 192.168.0.0/24 allow
+      # lxcbr0
+      interface: 10.0.3.1
+      access-control: 10.0.3.0/24 allow
+      # virbr0
+      interface: 192.168.122.1
+      access-control: 192.168.122.0/24 allow
 
 
 
@@ -432,7 +431,7 @@ server:
         # keysize. Keep this table very short, as linear search is done.
         # A message with an NSEC3 with larger count is marked insecure.
         # List in ascending order the keysize and count values.
-        val-nsec3-keysize-iterations: 1024 150 2048 500 4096 2500
+        val-nsec3-keysize-iterations: "1024 150 2048 500 4096 2500"
 
         # instruct the auto-trust-anchor-file probing to add anchors after ttl.
         add-holddown: 2592000 # 30 days
